# voice-agents

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Containerfile.higgs  Containerfile.voice-notebook  README.md  env.example  odh-document.yaml  pyproject.toml  requirements.txt  run.py  site.yml  test-genx.py  test-stt.py  test-tts-stream.py  test-tts.py  voice-presets-config.json  ws_server.py
ai-voice-agent/: Makefile
ai-voice-agent/backend/: ws_server.py
ai-voice-agent/guardrails/: maas-proxy-config.yaml  maas-proxy.yaml  model_storage_container.yaml  nemo-guardrails.yaml  nemo_models.yaml
ai-voice-agent/llama-stack/: README.md
content/: Makefile
content/modules/ROOT/: nav.adoc
content/notebooks/: 0-first-jupyter-notebook.ipynb  1-models.ipynb  2-pizza-shop.ipynb  Containerfile.voice-notebook  Makefile
docs/: README.md  _sidebar.md  index.html
docs/0-getting-connected/: 1-get-connected.md
docs/1-introduction/: 1-intro.md
docs/2-architecture/: 1-architecture.md  2-voice-sandwich.md  3-model-selection.md  4-flow-diagram.md  4-performance.md  5-performance.md  voice-flow-mermaid.md
docs/3-speech-to-text/: 1-stt.md
docs/4-text-to-speech/: 1-tts.md
docs/5-application/: 1-intro.md  2-agents-prompts.md  3-handoffs.md  4-demo.md
docs/6-observability/: 2-lls.md
docs/7-advanced/: 1-intro.md
llama-stack/: configmap.yaml  llama-stack.yaml
models/higgs-audio/: higgs-audio-v2-deployment.yaml
models/whisper/: whisper-llmisvc.yaml
src/: content_utils.py  graph.py  nodes.py  prompts.py  tools.py  utils.py
web/: middleware.ts  next.config.ts
(+31 files in other folders)
